fixed layout on narrow viewports

--- a/src/App.scss
+++ b/src/App.scss
@@ -21,7 +21,6 @@ h3,
 h4,
 h5,
 h6 {
-  width: max-content;
   max-width: 100%;
   overflow-wrap: break-word;
   line-height: 1.1;
@@ -110,9 +109,12 @@ a {
   .root-scroll {
     max-height: 100vh;
     max-height: var(--vh);
+    max-width: 100%;
 
     .simplebar-content {
       > .app {
+        overflow-x: hidden;
+        max-width: 100%;
         @include mixin.flex-column;
 
         align-items: stretch;
@@ -127,7 +129,7 @@ a {
           flex: 1;
           @include mixin.flex-column;
 
-          padding: var.$margins math.div(var.$margins, 2);
+          padding: var.$margins var.$gap;
         }
       }
     }
