--- a/src/components/Card.scss
+++ b/src/components/Card.scss
@@ -47,6 +47,10 @@ a.card {
         width: 100%;
       }
     }
+
+    .text-wrapper {
+      max-width: 100%;
+    }
   }
 
   &.highlight {
