--- a/src/pages/Links/style.scss
+++ b/src/pages/Links/style.scss
@@ -6,11 +6,13 @@
   @include mixin.flex-column;
 
   width: var.$main-width;
-  max-width: calc(100% - var.$margins);
+  max-width: 100%;
   gap: var.$margins;
 
   .links {
     @include mixin.grid-reading;
+
+    max-width: 100%;
 
     .link {
       height: fit-content;
